增加内存值查看页面